# anchor

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  projects.py  proposals.py
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: CONCEPT.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
